kubernetes/apps/base/romm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: romm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: romm
  template:
    metadata:
      labels:
        app: romm
    spec:
      containers:
        - name: romm
          image: revenz/romm
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 4000m
              memory: 2Gi
            limits:
              cpu: "10"
              memory: 8Gi
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: /media
              name: romm-media
            - mountPath: /temp
              name: romm-temp
            - mountPath: /app/Data
              name: romm-data
            - mountPath: /app/Logs
              name: romm-logs
            - mountPath: /app/common
              name: romm-common
      restartPolicy: Always
      volumes:
        - name: romm-media
          persistentVolumeClaim:
            claimName: media
        - name: romm-common
          persistentVolumeClaim:
            claimName: romm-common
        - name: romm-data
          persistentVolumeClaim:
            claimName: romm-data
        - name: romm-logs
          persistentVolumeClaim:
            claimName: romm-logs
        - name: romm-temp
          emptyDir:
            sizeLimit: 100Gi
