kubernetes/apps/base/romm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm
  namespace: media
spec:
  selector:
    app: romm
  ports:
    - protocol: TCP
      port: 19200
      targetPort: 5000
