kubernetes/apps/base/romm/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: romm
  namespace: romm
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`romm.${cluster_domain}`)
      kind: Rule
      services:
        - name: romm
          port: 8080
